Fixes navigation alignment on larger screens

--- a/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
+++ b/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
@@ -456,6 +456,7 @@ footer hr {
 
   .nav-wrapper {
     position: relative;
+    left: 0;
     transform: translateX(0);
     /*height: auto;*/
     top: 0;
